--- a/src/app/menu-logado/menu-logado.component.html
+++ b/src/app/menu-logado/menu-logado.component.html
@@ -124,18 +124,20 @@
 <hr>
 <!--/menuProdutos-->
 <div class="container-fluid tamanho d-flex justify-content-end">
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Olá, Nome do usuario
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Meu Perfil</a>
-          <a class="dropdown-item" href="#">Minhas Compras</a>
-          <a class="dropdown-item" href="#">Meus Favoritos</a>
-          <a class="dropdown-item" href="#">Meus Produtos</a>
-          <a class="dropdown-item" href="#">Sair</a>
-        </div>
-      </div>
+    <ul class="nav nav-tabs">
+  
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle adapt" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Olá, nome do usuario</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Meu perfil</a>
+            <a class="dropdown-item" href="#">Minhas compras</a>
+            <a class="dropdown-item" href="#">Meus favoritos</a>
+            <a class="dropdown-item" href="#">Meus produtos</a>
+            <a class="dropdown-item" href="#">Sair</a>
+          </div>
+        </li>
+        
+      </ul>
 
 </div>
 
