--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -62,7 +62,11 @@
 <!--/logo-->
 
 <!-- IconeUser-->
-
+<div class="d-flex justify-content-end pr-4">
+    <button class="btn btn-floating " data-toggle="modal" data-target="#ExemploModalCentralizado">
+        <img  src="https://i.imgur.com/lAnmYcd.png" width="40" height="40" alt="icone do login">
+    </button>
+</div>
 <!-- /IconeUser-->
 
 <!-- menuProdutos-->
@@ -126,70 +130,59 @@
 <div class="container-fluid tamanho d-flex justify-content-end">
     
 
-    <!-- Botão para acionar o pop up de Login-->
-    <div class="d-flex justify-content-end">
-        <button class="btn btn-floating " data-toggle="modal" data-target="#ExemploModalCentralizado">
-            <i class="fa fa-user-o" aria-hidden="true"></i>
-        </button>
-    </div>
-    <!-- /Botão para acionar pop up de Login-->
-
-    <!-- Modal Pop-Up -->
-    <div class="modal fade" id="ExemploModalCentralizado">
+    <!-- continuação para o modal do Botão para acionar o pop up de Login-->
+    
+    <div class="modal fade" id="ExemploModalCentralizado"> 
         <div class="modal-dialog">
-            <div class="modal-content">
-                <div>
-                    <div>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-                            <!--fechamento X--> <span aria-hidden="true">&times;</span>
-                            <!--/fechamento X-->
-                        </button>
-                    </div>
-
-                    <!--card Pop-Up-->
-
-                    <body class="estiloDoPopUp">
-                        <div class="containerPopUp">
-                            <div class="pt-0">
-                                <h1>Já tem uma conta?</h1>
-
-                                <!--Campo preenchimento usuário já cadastrado-->
-                                <div class="label-float">
-                                    <input [(ngModel)]='usuarioLogin.emailUsuario' type="text" id="email" placeholder="">
-                                    <label for="email">E-mail</label>
-                                </div>
-
-                                <div class="label-float">
-                                    <input [(ngModel)]='usuarioLogin.senhaUsuario' type="text" id="senha" placeholder="">
-                                    <label for="senha">Senha</label>
-                                </div>
-                                <!--Campo preenchimento usuário já cadastrado-->
-
-                                <!--Campo esqueceu senha -->
-                                <a class="textEsqueceu" href="" >Esqueceu sua senha?</a>
-                                <!--/Campo esqueceu senha -->
-
-                                <!--Botão de Entrar-->
-                                <div class="justify-center">
-                                    <button (click)='entrar()' class="bt-entrar">Seja bem-vinde</button>
-                                </div>
-                                <!--/Botão de Entrar-->
-                                <div class="justify-center">
-                                    <hr>
-                                </div>
-
-                                <h1>Ainda não tem uma conta?</h1>
-
-                                <!--Botão de Cadastrar-->
-                                <div class="justify-center">
-                                    <button routerLink='/cadastrar' class="bt-entrar" >Venha para nossa Ecovila</button>
-                                </div>
-                                <!--Botão de Cadastrar-->
-
-                            </div>
+                <div class="modal-content">
+                    <div class="modal-body" >
+                        <div>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+          <!--fechamento X--> <span aria-hidden="true">&times;</span> <!--/fechamento X-->
+                            </button>
                         </div>
-                    </body>
-                    <!--/card Pop-Up-->
+            
+         
+
+<!--card Pop-Up-->
+                <body class="estiloDoPopUp">
+                    <div class="containerPopUp">
+                        <div class="pt-0" >
+                          <h1>Já tem uma conta?</h1>
+
+                <!--Campo preenchimento usuário já cadastrado-->
+                          <div class="label-float">
+                              <input type="text" id="email" placeholder="" required>
+                              <label for="email">E-mail</label>
+                          </div>
+
+                          <div class="label-float">
+                            <input  type="password" id="senha" placeholder="" required>
+                            <label for="senha">Senha</label>
+                        </div>
+                <!--Campo preenchimento usuário já cadastrado-->
+                       
+                <!--Botão de Entrar-->
+                        <div class="justify-center">
+                            <button class="bt-entrar">Seja bem-vinde</button>
+                        </div>
+                <!--/Botão de Entrar-->
+                <div class="justify-center">
+                    <hr>
+                </div>
+
+                <h1>Ainda não tem uma conta?</h1>
+                
+                <!--Botão de Cadastrar-->
+                <div class="justify-center">
+                    <button class="bt-entrar">Venha para nossa Ecovila</button>
+                </div>
+                <!--Botão de Cadastrar-->
+                      
+                          </div>
+                      </div>
+                </body>
+    <!--/card Pop-Up-->
 
                 </div>
             </div>
