--- a/src/app/tela-usuario/tela-usuario.component.html
+++ b/src/app/tela-usuario/tela-usuario.component.html
@@ -8,7 +8,7 @@
                 <div class="card-body">
                     <div class="col mx-auto text-center">
                         <img src="https://i.imgur.com/NkrbUT5.png" class='img-fluid' width="500" height="500" alt="gif de uma arvore">
-                        <h2 class="cor card-title">Histórico da compra</h2>
+                        <h2 class="cor card-title">Resumo da conta</h2>
                     </div>
 
                     <div class="cor altera-menu card-group">
@@ -39,7 +39,10 @@
                         </div>
                         
                     </div>
-            
+                    <div class="d-flex cor justify-content-end">
+                        <h5> Histórico de compras</h5>
+                    </div>
+                    
                 </div>
 
                 <div class="col mx-auto text-center">
