Rotas para o menu

--- a/src/app/alterarcadastro/alterarcadastro.component.html
+++ b/src/app/alterarcadastro/alterarcadastro.component.html
@@ -1,80 +1,70 @@
-   
-  <!-- imagem + card-->
-  <body>
-    
+<!-- imagem + card-->
+
+<body>
+
     <div class="row container-fluid pt-4">
         <div class="col-sm-6 dista">
-          <div class="card ">
-            <div class="card-body container-fluid pt-5 " style="background-color: #FFFFFF">
-                <div class="col mx-auto text-center">
-                    <img src="https://i.imgur.com/NwSnfBn.png" class="img-fluid" width="416" height="416 " alt="imagem principal">
-                    <h2 class="cor card-title">Resumo da conta</h2>
-                </div>                
-            </div>
-          </div>
-         </div>
-        
-         <!-- /imagem + card-->
-            
-            <!-- Formulario-->
-                <div class="col-sm-6">
-                  <div class="card">
-                    <div class="card-body container-fluid pt-5 " style="background-color: #FFFFFF">
-                        <h1> Dados Cadastrais </h1>
-        
-                        <div class='label-float d-flex justify-content-center'>
-                            <input type="text" id="nome" placeholder="" required>
-                            <label for="nome">Nome*</label>
-            
-                        </div>
-            
-                        <div class="label-float d-flex justify-content-center">
-                            <input type="text" id="nomeSocial" placeholder="" required>
-                            <label for="nomeSocial">Nome social</label>
-            
-                        </div>
-            
-                        <div class="label-float d-flex justify-content-center">
-                            <input type="date" id="dataDeNascimento" placeholder="" required>
-                            <label for="dataDenNscimento">Data de nascimento*</label>
-                            
-            
-                        </div>
-            
-                        <div class="label-float d-flex justify-content-center">
-                            <input type="text" id="cpf" placeholder="" required>
-                            <label for="cpf">CPF*</label>
-            
-                        </div>
-            
-                        <div class="label-float d-flex justify-content-center">
-                            <input type="text" id="email" placeholder="" required>
-                            <label for="email">E-mail*</label>
-            
-                        </div>
-            
-                        <div class="label-float d-flex justify-content-center">
-                            <input type="text" id="senha" placeholder="" required>
-                            <label for="senha">Senha*</label>
-                        </div>
-            
-                        <div class="label-float d-flex justify-content-center">
-                            <input type="text" id="confirmeSenha" placeholder="" required>
-                            <label for="confirmeSenha">Confirme sua senha*</label>
-                        </div>
-            
-                        <div class="label-float d-flex justify-content-end ">
-                            <button>Finalizar cadastro</button>
-                        </div>
+            <div class="card ">
+                <div class="card-body container-fluid pt-5 " style="background-color: #FFFFFF">
+                    <div class="col mx-auto text-center">
+                        <img src="https://i.imgur.com/NwSnfBn.png" class="img-fluid" width="416" height="416 "
+                            alt="imagem principal">
+                        <h2 class="cor card-title">Resumo da conta</h2>
                     </div>
-                  </div>
                 </div>
-                  
-               </div>
-    
-                <!-- /Formilario--> 
+            </div>
+        </div>
+
+        <!-- /imagem + card-->
+
+        <!-- Formulario-->
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body container-fluid pt-5 " style="background-color: #FFFFFF">
+                    <h1> Dados Cadastrais </h1>
+
+                    <div class='label-float d-flex justify-content-center'>
+                        <input type="text" id="nome" placeholder="" required>
+                        <label for="nome">Nome*</label>
+
+                    </div>
+
+                    <div class="label-float d-flex justify-content-center">
+                        <input type="text" id="nomeSocial" placeholder="" required>
+                        <label for="nomeSocial">Nome social</label>
+
+                    </div>
+
+                    <div class="label-float d-flex justify-content-center">
+                        <input type="text" id="cpf" placeholder="" required>
+                        <label for="cpf">CPF*</label>
+
+                    </div>
+
+                    <div class="label-float d-flex justify-content-center">
+                        <input type="text" id="email" placeholder="" required>
+                        <label for="email">E-mail*</label>
+
+                    </div>
+
+                    <div class="label-float d-flex justify-content-center">
+                        <input type="text" id="senha" placeholder="" required>
+                        <label for="senha">Senha*</label>
+                    </div>
+
+                    <div class="label-float d-flex justify-content-center">
+                        <input type="text" id="confirmeSenha" placeholder="" required>
+                        <label for="confirmeSenha">Confirme sua senha*</label>
+                    </div>
+
+                    <div class="label-float d-flex justify-content-end ">
+                        <button>Finalizar cadastro</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- /Formulario-->
 </body>
-
-
-
-
