--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -64,15 +64,15 @@
       <div class="col-md-0 mx-auto ">
         <h5 class="title mb-2 mt-0 font-bold text-nowrap font-weight-bold">Nos encontre</h5>
         <ul class="d-flex pl-0 ">
-          <a href="https://www.facebook.com/" target="_blank" class="icoFacebook">
+          <a href="https://www.facebook.com/" target="_blank" class="icoFacebook" alt='Caminho para facebook'>
             <i class=" fa fa-facebook-square" aria-hidden="true"></i>
           </a>
 
-          <a href="https://www.instagram.com/" target="_blank" class="icoInstagram">
+          <a href="https://www.instagram.com/" target="_blank" class="icoInstagram" alt='Caminho para instagram'>
             <i class="fa fa-instagram" aria-hidden="true"></i>
           </a>
 
-          <a href="https://www.twitter.com/" target="_blank" class="icoTwitter">
+          <a href="https://www.twitter.com/" target="_blank" class="icoTwitter" alt='Caminho para twitter'>
             <i class="fa fa-twitter-square" aria-hidden="true"></i>
           </a>
         </ul>
