--- a/src/app/criarproduto/criarproduto.component.css
+++ b/src/app/criarproduto/criarproduto.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 ul.social-networks li{
     display: inline;
     margin: 0;
@@ -84,7 +86,7 @@ ul.social-networks li{
   
     /* formulario de cadastro*/
     
-  @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+  
   
   .container {
     display: flex;
@@ -229,5 +231,13 @@ ul.social-networks li{
     padding-left: 0px;
     }
     
-    
+    input[type=text], select, textarea {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      resize: vertical;
+      font-family: Roboto, sans-serif;
+      font-size: 16px;
+    }
   
