--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,41 +5,41 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <a class=" text-white nav-link" href="#como">Como Funciona? <span class="sr-only">(current)</span></a>
+    <a class=" text-white nav-link" routerLink='comoFunciona'>Como Funciona? <span class="sr-only">(current)</span></a>
     <div class="collapse navbar-collapse container-fluid" id="navbarSupportedContent">
         <ul class=" navbar-nav d-flex espaco align-items-center ">
             <li class="nav-item active">
             </li>
 
             <li class="nav-item">
-                <a class=" text-white nav-link" href="#sobre">Sobre nós</a>
+                <a class=" text-white nav-link" routerLink='sobreNos'>Sobre nós</a>
             </li>
 
             <li class="nav-item">
-                <a class=" text-white nav-link" href="#time">Nosso time</a>
+                <a class=" text-white nav-link" routerLink='nossoTime'>Nosso time</a>
             </li>
 
             <li class="nav-item">
-                <a class=" text-white nav-link" href="#contato">Contato</a>
+                <a class=" text-white nav-link" routerLink='contato'>Contato</a>
             </li>
         </ul>
 
         <ul class=" navbar-nav ml-auto d-flex align-items-center">
 
             <li>
-                <a href="https://www.facebook.com/" target="_blank" class="icoFacebook">
+                <a href="https://www.facebook.com/" target="_blank" class="icoFacebook" alt='Icone do Facebook'>
                     <i class=" fa fa-facebook-square" aria-hidden="true"></i>
                 </a>
             </li>
 
             <li>
-                <a href="https://www.instagram.com/" target="_blank" class="icoInstagram">
+                <a href="https://www.instagram.com/" target="_blank" class="icoInstagram" alt='Icone do instagram'>
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                 </a>
             </li>
 
             <li>
-                <a href="https://www.twitter.com/" target="_blank" class="icoTwitter">
+                <a href="https://www.twitter.com/" target="_blank" class="icoTwitter" alt='Icone do twitter'>
                     <i class="fa fa-twitter-square" aria-hidden="true"></i>
                 </a>
             </li>
@@ -55,7 +55,7 @@
 <!--logo-->
 
 <div class=" d-flex justify-content-center">
-    <img src="https://i.imgur.com/qK0vDVm.jpg" width="250" height="260" alt="logotipo">
+    <img src="https://i.imgur.com/qK0vDVm.jpg" width="250" height="260" alt="Logotipo Natureba">
 
 </div>
 
@@ -77,16 +77,13 @@
     <div class=" collapse navbar-collapse " id="conteudoNavbarSuportado">
         <ul class="navbar-nav cor altera-menu posicao ">
 
-
-
-
             <li class="nav-item">
                 <a class="  nav-link" href="#ofertas">Baratinhos</a>
             </li>
 
 
             <li class="nav-item">
-                <a class="  nav-link" href="#maquiagem">Maquiagem</a>
+                <a class="nav-link" href="#maquiagem">Maquiagem</a>
             </li>
 
             <li class="nav-item">
@@ -164,10 +161,6 @@
                                     <label for="senha">Senha</label>
                                 </div>
                                 <!--Campo preenchimento usuário já cadastrado-->
-
-                                <!--Campo esqueceu senha -->
-                                <a class="textEsqueceu" href="" >Esqueceu sua senha?</a>
-                                <!--/Campo esqueceu senha -->
 
                                 <!--Botão de Entrar-->
                                 <div class="justify-center">
