--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -109,6 +109,7 @@ body {
   background-attachment: fixed;
   min-height: 995px;
   
+  
  
     
   
@@ -122,7 +123,7 @@ body {
   Height: 800px;
   left: 374px; /*movimento*/
   top: 100px; /*distacia do topo*/ 
-  
+  display:flex;
   
 
 }
