--- a/src/app/tela-usuario/tela-usuario.component.html
+++ b/src/app/tela-usuario/tela-usuario.component.html
@@ -1,5 +1,3 @@
-
-
 <!--aspectosConta-->
 <div class=" container-fluid pt-5 " style="background-color: #F7EDE2">
     <div class="row">
@@ -7,7 +5,8 @@
             <div class="margem-card card ml-5">
                 <div class="card-body">
                     <div class="col mx-auto text-center">
-                        <img src="https://i.imgur.com/NkrbUT5.png" class='img-fluid' width="500" height="500" alt="gif de uma arvore">
+                        <img src="https://i.imgur.com/NkrbUT5.png" class='img-fluid' width="500" height="500"
+                            alt="gif de uma arvore">
                         <h2 class="cor card-title">Resumo da conta</h2>
                     </div>
 
@@ -16,16 +15,16 @@
                             <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
                             <div class="ladocard card-body">
                                 <h5 class="card-title">Título do card</h5>
-                                <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como
-                                    uma introdução a um conteúdo adicional.</p>
+                                <p class="card-text">Este é um card maior com suporte a texto embaixo.
+                                    </p>
                             </div>
                         </div>
                         <div class="card">
                             <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
                             <div class="meiocard card-body">
                                 <h5 class="card-title">Título do card</h5>
-                                <p class="card-text">Este é um card com suporte a texto embaixo, que funciona como uma
-                                    introdução a um conteúdo adicional.</p>
+                                <p class="card-text">Este é um card com suporte a texto embaixo.
+                                   </p>
                             </div>
 
                         </div>
@@ -33,84 +32,104 @@
                             <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
                             <div class="ladocard card-body">
                                 <h5 class="card-title">Título do card</h5>
-                                <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como
-                                    uma introdução a um conteúdo adicional. </p>
+                                <p class="card-text">Este é um card maior com suporte a texto embaixo.
+                                     </p>
                             </div>
                         </div>
-                        
+
                     </div>
                     <div class="d-flex cor justify-content-end">
                         <h5> Histórico de compras</h5>
                     </div>
-                    
+
                 </div>
 
                 <div class="col mx-auto text-center">
-                    
+
                     <h2 class="cor card-title">Você plantou x árvores</h2>
                 </div>
             </div>
         </div>
         <!--CardsLateralDireita-->
         <div class="cor altera-menu col-sm-6  ">
-        
-            <div class=" card mr-5 ">
-                <div class=" card-body">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <h5 class="font-weight-bold card-title">Está aqui para vender?</h5>
-                        </div>
-                        
-                        <div class="col-sm-6 d-flex justify-content-end">
-                            <i class="fa fa-money" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                    
-                    <p class="card-text">Veja todos os seus anúncios e adicione novos produtos. Faça vendas para que
-                        nossos consumidores fiquem mais bonites do que nunca.</p>
-                    <a href="#" class="btn btn-primary">Ver anuncios</a>
-                </div>
-            </div>
-                
-            <div class=" card mr-5">
-                <div class="card-body">
 
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <h5 class="font-weight-bold card-title text-nowrap">Quer ver seus queridinhos?</h5>
+            <div class="col-sm-12">
+                <div class=" card mr-5 ">
+                    <div class=" card-body">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h5 class="font-weight-bold card-title">Está aqui para vender?</h5>
+                            </div>
+
+                            <div class="col-sm-6 d-flex justify-content-end">
+                                <i class="fa fa-money" aria-hidden="true"></i>
+                            </div>
                         </div>
-                        
-                        <div class="col-sm-6 d-flex justify-content-end">
-                            <i class="fa fa-heart" aria-hidden="true"></i>
-                        </div>
+
+                        <p class="card-text">Veja todos os seus anúncios e adicione novos produtos. Faça vendas para que
+                            nossos consumidores fiquem mais bonites do que nunca.</p>
+                        <a href="#" class="btn btn-primary">Ver anuncios</a>
                     </div>
-                    
-                    <p class="card-text">Você tinha gostado de algo e quer comprar agora? Quer ver se os preços de
-                        anúncios cairam? Reveja agora os seus produtos favoritos. </p>
-                    <a href="#" class="btn btn-primary">Ver favoritos</a>
                 </div>
             </div>
 
-           
+            <div class="col-sm-12 pt-5">
+                <div class=" card mr-5">
+                    <div class="card-body">
+
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h5 class="font-weight-bold card-title text-nowrap">Quer ver seus queridinhos?</h5>
+                            </div>
+
+                            <div class="col-sm-6 d-flex justify-content-end">
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            </div>
+                        </div>
+
+                        <p class="card-text">Você tinha gostado de algo e quer comprar agora? Reveja agora os seus produtos favoritos e experimente. </p>
+                        <a href="#" class="btn btn-primary">Ver favoritos</a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-sm-12 pt-5">
                 <div class=" card mr-5  ">
                     <div class=" card-body">
                         <div class="row">
                             <div class="col-sm-6">
                                 <h5 class="font-weight-bold card-title text-nowrap">Mudou alguma coisa?</h5>
                             </div>
-                            
+
                             <div class="col-sm-6 d-flex justify-content-end">
                                 <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                             </div>
                         </div>
-                        <p class="card-text">Seu celular mudou? Escreveu seu endereço errado? Altere seus dados para que
-                            esteja tudo em ordem para suas compras e vendas.</p>
+                        <p class="card-text">Seu celular mudou? Altere seus dados para segurança durante suas compras e/ou vendas.</p>
                         <a href="#" class="btn btn-primary">Alterar cadastro</a>
                     </div>
                 </div>
-    
-            
-            
+            </div>
+
+            <div class="col-sm-12 pt-5">
+                <div class=" card mr-5  ">
+                    <div class=" card-body">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h5 class="font-weight-bold card-title text-nowrap">Minhas compras?</h5>
+                            </div>
+
+                            <div class="col-sm-6 d-flex justify-content-end">
+                                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <p class="card-text"> Tá afim de ver o que você ja comprou? Veja detalhes do seu histórico </p>
+                        <a href="#" class="btn btn-primary">Ver minhas compras</a>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
 
