salvando antes de brincar com rotas

--- a/src/app/criarproduto/criarproduto.component.html
+++ b/src/app/criarproduto/criarproduto.component.html
@@ -21,8 +21,11 @@
                     </div>
 
                     <div class="label-float d-flex justify-content-center">
-                        <input type="text" id="EscolhaUmaCategoria" placeholder="" required>
+                        
                         <label for="EscolhaUmaCategoria">Escolha uma categoria*</label>
+                        <select name="categoria" id="categoria" class="form-control">
+                            <option value=""></option>
+                        </select>
 
                     </div>
 
